# rekindled

./: .gitignore  README.md  vetur.config.js
backend/: manage.py  pyproject.toml
backend/games/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/games/migrations/: 0001_initial.py  0002_game_cover_game_icon.py  0003_alter_game_cover_alter_game_icon_alter_game_image.py  0004_game_abbreviation_platform_abbreviation.py
backend/handles/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/handles/migrations/: 0001_initial.py
backend/jwt_tokens/: apps.py  serializers.py  urls.py  views.py
backend/keen/management/commands/: init_db.py
backend/kindles/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/kindles/migrations/: 0001_initial.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_remove_notification_actor_notification_sender.py
backend/rekindled/: asgi.py  pagination.py  permissions.py  settings.py  urls.py  wsgi.py
backend/rekindled/converters/: __init__.py  converters.py
backend/users/: admin.py  emails.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_profile_discord_account_number_profile_discord_id_and_more.py
backend/users/templates/: activation_email.html
backend/users/tests/: test_views.py
backend/utils/: seed_database.py  testing_factories.py
frontend/: README.md  jest.config.js  nuxt.config.js  (+4 more)
(+87 files in other folders)
